--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,7 @@ deploy-production:
   dependencies:
     - app-build
   script:
+    - npm install -g firebase-tools
     - npm run deploy
   only:
     - master
