--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ckeditor/ckeditor5-angular": "^1.2.3",
+    "@ckeditor/ckeditor5-build-classic": "^18.0.0",
+    "@ngrx/effects": "^9.1.0",
     "@ngrx/store": "^9.1.0",
+    "@ngrx/store-devtools": "^9.1.0",
     "@types/jquery": "^3.3.34",
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
-    "rxjs": "~6.3.3",
+    "redux-devtools-extension": "^2.13.8",
+    "rxjs": "^6.3.3",
     "semantic-ui": "^2.4.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
